# lmn

./: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish-pypi.yml  python-run-tests.yml
example/: README.md  configuration
example/awesome-project/: .env.secret  .lmn.json5  .rmx.config  .secret.env  README.md  script.py
lmd/: __init__.py  config.py  helpers.py  machine.py  project.py
lmd/cli/: __init__.py  main.py  utils.py
lmd/cli/commands/: run.py  sync.py
lmn/: __init__.py  _version.py  config.py  const.py  helpers.py  machine.py  runner.py
lmn/cli/: __init__.py  _config_loader.py  _utils.py  brun.py  nv.py  run.py  sync.py
lmn/container/: __init__.py  docker.py  singularity.py
lmn/scheduler/: __init__.py  pbs.py  slurm.py
rmx/: __init__.py  _version.py  config.py  helpers.py  machine.py  project.py  runner.py
rmx/cli/: __init__.py  _config_loader.py  _utils.py  main.py  run.py  sync.py  utils.py
rmx/cli/commands/: run.py  status.py  sync.py
tel/: config.py  helpers.py  machine.py  project.py  types.py
tel/cli/: __init__.py  main.py  utils.py
tel/cli/commands/: run.py
tests/: test_config.py
